Compatibility to Java 1.8